# neural-qmc-wavefunction

./: .gitignore  README.md  pyproject.toml
.github/: meta-issue-body.md  meta-issue-updated.md  phase1-issue-body.md  phase2-issue-body.md  phase3-issue-body.md  phase4-issue-body.md  phase5-issue-body.md  phase6-issue-body.md  webapp-issue-body.md
docs/: IMPLEMENTATION_PLAN.md
scripts/: train_h2.py
src/nqmc/: __init__.py
src/nqmc/hamiltonian/: __init__.py  molecular.py
src/nqmc/optimizer/: __init__.py  vmc.py
src/nqmc/sampler/: __init__.py  metropolis.py
src/nqmc/systems/: __init__.py  molecule.py
src/nqmc/visualization/: __init__.py
src/nqmc/wavefunction/: __init__.py  base.py  simple.py
